--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,8 +38,22 @@
             <Button
                 android:id="@+id/create_qr_btn"
                 android:layout_margin="30dp"
-                android:text="点击后，显示二维码"
+                android:text="输入文字后，点击显示二维码"
                 android:layout_height="wrap_content" android:layout_width="wrap_content"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/scan_result"
+                android:layout_margin="30dp"
+                android:hint="二维码结果" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/scan_btn"
+                android:layout_margin="30dp"
+                android:text="扫二维码"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
